fixed admin table scrollbar

--- a/src/client/assets/scss/admindashboard.scss
+++ b/src/client/assets/scss/admindashboard.scss
@@ -56,6 +56,15 @@ justify-content: space-between;
    overflow-x: scroll;
 
 }
+.recentAppointments::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .recentAppointments {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 .recentAppointmentsTable{
     width: 100%;
    border: 1px solid var(--lightgrey);
